@@ -1,28 +1,31 @@
 package Hend.BackendSpringboot.entity;
 
-import Hend.BackendSpringboot.token.Token;
+
+import com.fasterxml.jackson.annotation.JsonIgnore;
 import jakarta.persistence.*;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
+import lombok.*;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-import com.fasterxml.jackson.annotation.JsonIgnore;
+
 
 import java.util.Collection;
-import java.util.List;@Data
+import java.util.Collections;
+import java.util.List;
+@Getter
+@Setter
 @Builder
 @NoArgsConstructor
 @AllArgsConstructor
 @Entity
 @Table(name = "_user")
-public class User implements UserDetails {
+public class User  implements UserDetails{
+
 
     @Id
     @GeneratedValue
     private Integer id_user;
+
     private String firstname;
     private String lastname;
     private String email;
@@ -30,24 +33,68 @@ public class User implements UserDetails {
     private String image;
     private String address;
     private Integer phone_number;
+    private boolean accountLocked;
+    private boolean enbaled;
+
+    public String getResetCode() {
+        return resetCode;
+    }
+
+    public void setResetCode(String resetCode) {
+        this.resetCode = resetCode;
+    }
+
+    private String resetCode;
+
+    public Role getRole() {
+        return role;
+    }
+
+    public Integer getId_user() {
+        return id_user;
+    }
+
+    public void setId_user(Integer id_user) {
+        this.id_user = id_user;
+    }
+
+    public void setRole(Role role) {
+        this.role = role;
+    }
 
     @Enumerated(EnumType.STRING)
-    private Role role;
+    private Role role = Role.USER;
 
-    //@OneToMany(mappedBy = "user", cascade = CascadeType.ALL)
-    //private List<Incident> incidents;
+    @JsonIgnore
+   @OneToMany(mappedBy = "user", cascade = CascadeType.ALL)
+    private List<Incident> incidents;
 
-    //@OneToMany(mappedBy = "user", cascade = CascadeType.ALL)
-    //private List<Claim> claims;
+    @OneToMany(mappedBy = "user", cascade = CascadeType.ALL)
+    @JsonIgnore
+    private List<Claim> claims;
+
+    @OneToOne(mappedBy = "user")
+    @JsonIgnore
+    private ForgetPassword forgetPassword ;
+
 
 
     public User(Integer userId) {
     }
 
+    public String getEmail() {
+        return email;
+    }
+
+    public void setEmail(String email) {
+        this.email = email;
+    }
 
     @Override
+    @JsonIgnore
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(role.name()));
+        SimpleGrantedAuthority authority = new SimpleGrantedAuthority(role.name());
+        return Collections.singletonList(authority);
     }
 
     @Override
@@ -57,6 +104,9 @@ public class User implements UserDetails {
 
     public String getFirstname() {
         return firstname;
+    }
+    public String getLastname() {
+        return lastname;
     }
 
     @Override
@@ -83,17 +133,7 @@ public class User implements UserDetails {
     public boolean isEnabled() {
         return true;
     }
-
     public Integer getId() {
         return id_user;
     }
-
-    public void setIdUser(Integer id) {
-    }
-
-    public Integer getIdUser() {
-        return id_user;
-    }
 }
-
-
